# PlayOpenGL

./: CMakeLists.txt  glad.c  main.cpp  matrix_render.cpp  shader.cpp  shader_render.cpp  shaders.cpp  texture_render.cpp  triangle.cpp
headers/: GLUtils.h  IRender.h  VertexUtils.h  matrix_3d_render.h  matrix_render.h  shader.h  shader_render.h  shaders.h  texture_render.h  triangle.h
include/glad/: glad.h
lession/: glwindow.cpp  glwindow.h
lession/render/: advance_framebuffer_render.cpp  advance_framebuffer_render.h  advance_matrix_render.cpp  advance_matrix_render.h  advance_render  advance_render.h  advance_texture_render.cpp  advance_texture_render.h  cat_3d_render.cpp  cat_3d_render.h  cat_render.cpp  cat_render.h  split_render.cpp  split_render.h  triangle_render.cpp  triangle_render.h
lession/render/drawer/: texture_drawer.cpp  texture_drawer.h
lession/render/provider/: cat_body_provider.h  cat_header_provider.h  cat_left_feet.h  cat_right_feet.h
render/: matrix_3d_render.cpp  matrix_render.cpp  shader_render.cpp  texture_render.cpp  triangle.cpp
resources/shaders/: vShader.vs
resources/shaders/3d/: fShader.fs  vShader.vs
resources/shaders/advance/: vShader.vs
resources/shaders/advance/framebuffer/: fShader.fs  vShader.vs
resources/shaders/advance/matrix/: vShader.vs
resources/shaders/advance/texture/: fShader.fs  vShader.vs
resources/shaders/cat/: fShader.fs  vShader.vs
resources/shaders/cat/3d/: fShader.fs  vShader.vs
resources/shaders/cat/texture/: fShader.fs  vShader.vs
resources/shaders/shaders/: fShader.fs
resources/shaders/split/: vShader.vs
resources/shaders/textures/: fShader.fs  vShader.vs
resources/shaders/triangle/: fShader.fs  vShader.vs
